tests/fail/from_import.py
# 'something' could not be resolved
from something import that

# 'dataclasses.something' could not be resolved
from dataclasses import something
